# tldr-swinton

./: .gitignore  .gitmodules  .tldrsignore  AGENTS.md  CLAUDE.md  HANDOFF.md  PHILOSOPHY.md  README.md  interlab.ideas.md  interlab.md  interlab.sh  kimi.plugin.json  pyproject.toml
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.meta.json
.claude/: clodex-toggle.flag  flux-drive.yaml
.claude-plugin/: integration.json  plugin.json
agents/: architecture.md  critical-rules.md  data-structures.md  mcp-server.md  plugin.md  related-projects.md  semantic-search.md
docs/: PRD.md  QUICKSTART.md  agent-workflow.md  claude-skill.md  dev-reference.md  harness-capabilities.md  (+5 more)
tldr-bench/: AGENTS.md  README.md  pyproject.toml
tldr-bench/agent_eval/graders/: _graderlib.py  test_cross_gitignore_nested.py  test_cross_manifest_flags.py  test_cross_module_init.py  test_diff_output_boundary.py  test_diff_path_containment.py  test_diff_preset_explicit.py  test_neg_import_statement.py  test_neg_test_file.py  test_neg_token_fallback.py  test_refactor_callgraph_dedupe.py  test_refactor_go_signature.py  test_refactor_symbol_registry.py
tldr-bench/agent_eval/mutations/: cross-gitignore-nested.yaml  cross-manifest-flags.yaml  cross-module-init.yaml  diff-output-boundary.yaml  diff-path-containment.yaml  diff-preset-explicit.yaml  neg-import-statement.yaml  neg-test-file.yaml  neg-token-fallback.yaml  refactor-callgraph-dedupe.yaml  refactor-go-signature.yaml  refactor-symbol-registry.yaml
tldr-bench/data/: swebench_sample.jsonl
tldr-bench/docs/: LOG_SCHEMA.md  OPENHANDS.md  TASKS.md  VARIANTS.md
tldr-bench/scripts/: build_swebench_arm64.py  compare_results.py  prepare_agent_value_sources.py  report_savings.py  run_agent_value_eval.py  run_bench.py  run_new_features_bench.py  run_savings_sweep.py  shim_client.py  summarize.py  summarize_results.py
tldr-bench/scripts/data/: lfs_setup.sh  verify_datasets.py
tldr-bench/shim/: README.md  config.toml
tldr-bench/tests/: test_agent_eval_analysis.py  test_agent_eval_claude.py  test_agent_eval_codex.py  test_agent_eval_recon.py  test_agent_eval_schema.py  test_agent_eval_sources.py  test_agent_eval_workspace.py  test_agent_value_cli.py  test_agent_value_tasks.py  test_cassette_variant.py  test_cli_runner.py  test_compare_results.py  test_compare_results_cli.py  test_dataset_context_runner.py  test_dataset_loader_parquet.py  test_dataset_manifest.py  test_dataset_runner.py  test_datasets_loader.py  test_longbench_adapter.py  test_metrics.py  test_openhands.py  test_openhands_runner.py  test_repobench_adapter.py  test_router.py  test_run_bench_agent_meta.py  test_run_bench_cli_version.py  test_run_bench_config_id.py  test_run_bench_filter.py  test_run_bench_flags.py  test_run_bench_logger.py  test_run_bench_metadata.py  test_run_bench_model_alias.py  test_run_bench_results_dir.py  test_run_bench_results_file.py  test_run_bench_results_prefix.py  test_runner.py  test_shim_adapter.py  test_shim_cli.py  test_shim_client.py  test_shim_server.py  (+5 more)
tldr-bench/tests/fixtures/: codex_trace_failure.jsonl  codex_trace_success.jsonl
tldr-bench/tests/fixtures/agent_eval_repo/: AGENTS.md  CLAUDE.md  README.md  app.py
tldr-bench/tests/fixtures/agent_eval_repo/.claude-plugin/: plugin.json
tldr-bench/tests/fixtures/agent_eval_repo/.codex/: config.toml
tldr-bench/tests/fixtures/agent_eval_repo/tldr-bench/agent_eval/graders/: hidden.py
tldr-bench/tests/fixtures/agent_eval_repo/tldr-bench/tldr_bench/tasks/: agent_value.yaml
tldr-bench/tests/fixtures/datasets/: longbench.json  repobench.json
tldr-bench/tldr_bench/: __init__.py  compare_results.py  config.py  logger.py  meta.py  metrics.py  openhands.py  results.py  success_correlation.py  summary.py
tldr-bench/tldr_bench/agent_eval/: __init__.py  analysis.py  claude_runner.py  cli.py  codex_runner.py  policy.py  recon.py  report.py  schema.py  sources.py  tasks.py  workspace.py
tldr-bench/tldr_bench/data/: __init__.py
tldr-bench/tldr_bench/datasets/: __init__.py  commit0.py  loader.py  longbench.py  repobench.py  schema.py  swebench.py
tldr-bench/tldr_bench/runners/: cli_runner.py  dataset_context_runner.py  dataset_runner.py  openhands_runner.py  router.py  static_context_runner.py
tldr-bench/tldr_bench/shim/: __init__.py  adapter.py  client.py  server.py
tldr-bench/tldr_bench/tasks/: __init__.py  agent_value.yaml  curated.yaml  loader.py  official_datasets.yaml  official_datasets_context.yaml  public_subset.yaml  track_context.yaml  track_dataset.yaml  track_dataset_context.yaml  track_executable.yaml  track_frontier.yaml  track_new_features.yaml
tldr-bench/tldr_bench/variants/: __init__.py  attention_pruning.py  baselines.py  cassette.py  cfg.py  coherence_verify.py  context_delegation.py  coveragelens.py  dfg.py  difflens.py  edit_locality.py  helpers.py  pdg.py  slice.py  symbolkite.py
tldr-bench/tldr_bench/variants/disabled/: README.md  attention_pruning.py  coherence_verify.py  context_delegation.py
(+376 files in other folders)
