[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tldr-swinton"
version = "0.1.0"
description = "Token-efficient code analysis for LLMs - Fork with improved TypeScript and Rust support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Steve Yegge", email = "stevey@gmail.com" }
]
keywords = ["code-analysis", "llm", "ai", "typescript", "rust", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-ruby>=0.21.0",
    "pygments>=2.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.0",
    "torch>=2.0",
    "faiss-cpu>=1.7",
]
all = [
    "tree-sitter-kotlin>=0.1.0",
    "tree-sitter-swift>=0.1.0",
    "tree-sitter-c-sharp>=0.1.0",
    "tree-sitter-scala>=0.1.0",
    "tree-sitter-lua>=0.1.0",
    "tree-sitter-elixir>=0.1.0",
]

[project.scripts]
tldr-swinton = "tldr_swinton.cli:main"
tldrs = "tldr_swinton.cli:main"

[project.urls]
Homepage = "https://github.com/mistakeknot/tldr-swinton"
Repository = "https://github.com/mistakeknot/tldr-swinton"

[tool.hatch.build.targets.wheel]
packages = ["src/tldr_swinton"]
