[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tldr-swinton"
version = "0.5.2"
description = "Centralized platform for improving coding agent performance - token-efficient code analysis, session artifacts, and benchmarking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Steve Yegge", email = "stevey@gmail.com" }
]
keywords = ["code-analysis", "llm", "ai", "typescript", "rust", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-ruby>=0.21.0",
    "pygments>=2.0",
    "pygments-tldr>=2.19.3.0",
    "pathspec>=0.11.0",
    "ast-grep-py>=0.30",
]

[project.optional-dependencies]
# Test/development helpers
test = ["pytest>=8.0"]
# Semantic search (Ollama + FAISS only, no torch)
semantic-ollama = [
    "numpy>=1.26",
    "faiss-cpu>=1.7",
    "rank-bm25>=0.2.2",
    "rich>=13.0",  # Progress bars
]
# Semantic search with embeddings
semantic = [
    "numpy>=1.26",
    "sentence-transformers>=2.0",
    "torch>=2.0",
    "faiss-cpu>=1.7",
    "rank-bm25>=0.2.2",
    "rich>=13.0",  # Progress bars
]
# Full stack with Ollama integration
full = [
    "numpy>=1.26",
    "sentence-transformers>=2.0",
    "torch>=2.0",
    "faiss-cpu>=1.7",
    "rank-bm25>=0.2.2",
    "rich>=13.0",
    "ollama>=0.1",  # Local LLM client
    "tiktoken>=0.5",  # Token counting
]
# Additional language grammars
all = [
    "tree-sitter-kotlin>=1.0.0",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-scala>=0.24.0",
    "tree-sitter-lua>=0.4.0",
    "tree-sitter-elixir>=0.3.0",
]
# Structural code search — kept as alias for backwards compatibility
structural = []

[project.scripts]
tldr-swinton = "tldr_swinton.cli:main"
tldrs = "tldr_swinton.cli:main"

[project.urls]
Homepage = "https://github.com/mistakeknot/tldr-swinton"
Repository = "https://github.com/mistakeknot/tldr-swinton"

[tool.hatch.build.targets.wheel]
packages = ["src/tldr_swinton"]
