[project]
name = "tldr-bench"
version = "0.1.0"
description = "Token-efficiency benchmarks for tldr-swinton"
requires-python = ">=3.10"
dependencies = [
  "openhands-benchmarks",
  "pyyaml",
  "tiktoken",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tldr_bench*"]
